<resources>
    <string name="app_name">Tmdb</string>
    <string name="app_logo">TMDB Logo</string>
    <string name="movies">Movies</string>
    <string name="sort_results_header">Sort Results By</string>
    <string name="release_date_ascending">Release date ascending</string>
    <string name="release_date_descending">Release date descending</string>
    <string name="rating_ascending">Rating ascending</string>
    <string name="rating_descending">Rating descending</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="image_back_btn_desc">Back button</string>
    <string name="movie_name_with_release_date">%1$s (%2$s) </string>
    <string name="over_view">Overview</string>
    <string name="duration">%1$dh:%2$dm</string>
    <string name="sorted_by_release_date_ascending">Sorted by release date ascending</string>
    <string name="sorted_by_release_date_descending">Sorted by release date descending</string>
    <string name="sorted_by_rating_ascending">Sorted by rating ascending</string>
    <string name="sorted_by_rating_descending">Sorted by rating descending</string>
</resources>